--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,37 +8,14 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.tarea.ui.home.HomeFragment"
-        android:label="@string/menu_registro"
+        android:label="Home"
         tools:layout="@layout/fragment_home" />
 
-    <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.tarea.ui.gallery.GalleryFragment"
-        android:label="@string/menu_listado"
-        tools:layout="@layout/fragment_gallery" >
-        <action
-            android:id="@+id/action_nav_gallery_to_mainActivity22"
-            app:destination="@id/mainActivity2" />
-        <action
-            android:id="@+id/action_nav_gallery_to_mainActivity3"
-            app:destination="@id/mainActivity3" />
-        <action
-            android:id="@+id/action_nav_gallery_to_mainActivity43"
-            app:destination="@id/mainActivity43" />
-        <action
-            android:id="@+id/action_nav_gallery_to_mainActivity5"
-            app:destination="@id/mainActivity5" />
-    </fragment>
     <fragment
         android:id="@+id/videoFragment"
         android:name="com.example.tarea.videoFragment"
         android:label="fragment_video"
         tools:layout="@layout/fragment_video" />
-    <fragment
-        android:id="@+id/registroFragment"
-        android:name="com.example.tarea.RegistroFragment"
-        android:label="fragment_registro"
-        tools:layout="@layout/fragment_registro" />
     <activity
         android:id="@+id/mainActivity2"
         android:name="com.example.tarea.MainActivity2"
@@ -59,5 +36,27 @@
         android:name="com.example.tarea.MainActivity5"
         android:label="activity_main5"
         tools:layout="@layout/activity_main5" />
+    <fragment
+        android:id="@+id/nav_trailers"
+        android:name="com.example.tarea.ui.trailers.ListadoFragment"
+        android:label="listado_fragment"
+        tools:layout="@layout/listado_fragment" >
+        <action
+            android:id="@+id/action_listadoFragment_to_mainActivity2"
+            app:destination="@id/mainActivity2" />
+        <action
+            android:id="@+id/action_listadoFragment_to_mainActivity3"
+            app:destination="@id/mainActivity3" />
+        <action
+            android:id="@+id/action_listadoFragment_to_mainActivity43"
+            app:destination="@id/mainActivity43" />
+        <action
+            android:id="@+id/action_listadoFragment_to_mainActivity5"
+            app:destination="@id/mainActivity5" />
+    </fragment>
+    <fragment
+        android:id="@+id/nav_registro"
+        android:name="com.example.tarea.ui.registro.RegistroFragment"
+        android:label="RegistroFragment" />
 
 </navigation>
