--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -19,6 +19,7 @@
 
             <ImageView
                 android:id="@+id/iv_movie"
+                tools:src="@drawable/twilight"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginStart="20dp"
